syntax = "proto3";

option go_package = "github.com/go-park-mail-ru/2025_2_VKarmane/internal/finance_service/proto;proto";

package finance;

import "google/protobuf/timestamp.proto";

// protoc \
//  --go_out=. \
//  --go-grpc_out=. \
//  --go_opt=paths=source_relative \
//  --go-grpc_opt=paths=source_relative \
//  internal/app/finance_service/proto/finance.proto

message Account {
    int32 id = 1;
    double balance = 2;
    string type = 3;
    string name = 4;
    string description = 5;
    int32 currency_id = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateAccountRequest {
    int32 user_id = 1;
    double balance = 2;
    string name = 3;
    string type = 4;
    optional string description = 5;
    int32 currency_id = 6;
}

message UpdateAccountRequest {
    int32 user_id = 1;
    int32 account_id = 2;
    optional double balance = 3;
    optional string name = 4;
    optional string description = 5;
}

message AccountRequest {
    int32 user_id = 1;
    int32 account_id = 2;
}


message AddToAccountReqeust {
    string user_login = 1;
    int32 account_id = 2;
}

message UserID {
    int32 user_id = 1;
}

message ListAccountsResponse {
    repeated Account accounts = 1;
}

message Operation {
    int32 id = 1;
    int32 account_id = 2;
    int32 category_id = 3;
    string category_name = 4;
    string type = 5;
    string status = 6;
    string description = 7;
    string receipt_url = 8;
    string name = 9;
    double sum = 10;
    int32 currency_id = 11;
    string account_type = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp date = 14;
}

message OperationInList {
    int32 id = 1;
    int32 account_id = 2;
    int32 category_id = 3;
    string category_name = 4;
    string type = 5;
    string description = 6;
    string name = 7;
    string category_logo_hashed_id = 8;
    string category_logo = 9;
    double sum = 10;
    int32 currency_id = 11;
    string account_type = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp date = 14;
}

message CreateOperationRequest {
    int32 user_id = 1;
    int32 account_id = 2;
    optional int32 category_id = 3;
    string type = 4;
    string name = 5;
    string description = 6;
    double sum = 7;
    optional google.protobuf.Timestamp date = 8;
}

message UpdateOperationRequest {
    int32 user_id = 1;
    int32 account_id = 2;
    int32 operation_id = 3;
    optional int32 category_id = 4;
    optional string name = 5;
    optional string description = 6;
    optional double sum = 7;
    optional google.protobuf.Timestamp created_at = 8;
}

message OperationRequest {
    int32 user_id = 1;
    int32 account_id = 2;
    int32 operation_id = 3;
}

message ListOperationsResponse {
    repeated OperationInList operations = 1;
}

message Category {
    int32 id = 1;
    int32 user_id = 2;
    string name = 3;
    string description = 4;
    string logo_hashed_id = 5;
    string logo_url = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateCategoryRequest {
    int32 user_id = 1;
    string name = 2;
    string description = 3;
    string logo_hashed_id = 4;
}

message UpdateCategoryRequest {
    int32 user_id = 1;
    int32 category_id = 2;
    optional string name = 3;
    optional string description = 4;
    optional string logo_hashed_id = 5;
}

message CategoryRequest {
    int32 user_id = 1;
    int32 category_id = 2;
}

message CategoryByNameRequest {
    int32 user_id = 1;
    string category_name = 2;
}

message ListCategoriesResponse {
    repeated Category categories = 1;
}

message CategoryWithStats {
    Category category = 1;
    int32 operations_count = 2;
}

message ListCategoriesWithStatsResponse {
    repeated CategoryWithStats categories = 1;
}

message CategoryReportRequest {
    int32 user_id = 1;
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
}

message CategoryInReport {
    int32 category_id = 1;
    string category_name = 2;
    int32 operations_count = 3;
    double total_sum = 4;
}


message CategoryReportResponse  {
    repeated CategoryInReport categories = 1;
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
}

message OperationsByAccountAndFiltersRequest {
    int32 user_id = 1;
    int32 account_id = 2;
    int32 operation_id = 3;
    string name = 4;
    repeated int32 category_ids = 5;
    string operation_type = 6;
    string account_type = 7;
    google.protobuf.Timestamp date = 8;
}

message SharingsResponse {
    int32 sharing_id = 1;
    int32 account_id = 2;
    int32 user_id = 3;
    google.protobuf.Timestamp created_at = 4;
}

// FinanceService provides account, operation, and category management
// for users, enabling creation, retrieval, update, deletion, and reporting
// of financial data within the system.
service FinanceService {

    // --------------------------
    // Account methods
    // --------------------------

    // Creates a new financial account for the user.
    rpc CreateAccount(CreateAccountRequest) returns (Account);

    // Retrieves an account by its ID.
    rpc GetAccount(AccountRequest) returns (Account);

    // Retrieves all accounts associated with a specific user.
    rpc GetAccountsByUser(UserID) returns (ListAccountsResponse);

    // Updates properties of an existing account.
    rpc UpdateAccount(UpdateAccountRequest) returns (Account);

    // Deletes an account by ID and returns the deleted account.
    rpc DeleteAccount(AccountRequest) returns (Account);

    // Shares an account with another user and returns updated sharing info.
    rpc AddUserToAccounnt(AddToAccountReqeust) returns (SharingsResponse);


    // --------------------------
    // Operation methods
    // --------------------------

    // Creates a new financial operation (expense, income, transfer, etc.).
    rpc CreateOperation(CreateOperationRequest) returns (Operation);

    // Retrieves a financial operation by its ID.
    rpc GetOperation(OperationRequest) returns (Operation);

    // Retrieves operations for a given account, supporting filters.
    rpc GetOperationsByAccount(OperationsByAccountAndFiltersRequest)
        returns (ListOperationsResponse);

    // Updates an existing financial operation.
    rpc UpdateOperation(UpdateOperationRequest) returns (Operation);

    // Deletes an operation and returns the deleted entity.
    rpc DeleteOperation(OperationRequest) returns (Operation);


    // --------------------------
    // Category methods
    // --------------------------

    // Creates a new category for classifying operations.
    rpc CreateCategory(CreateCategoryRequest) returns (Category);

    // Retrieves a category by its ID, including associated statistics.
    rpc GetCategory(CategoryRequest) returns (CategoryWithStats);

    // Retrieves a category by its name, including associated statistics.
    rpc GetCategoryByName(CategoryByNameRequest) returns (CategoryWithStats);

    // Retrieves all categories belonging to a specific user.
    rpc GetCategoriesByUser(UserID) returns (ListCategoriesResponse);

    // Retrieves categories with statistics for a specific user.
    rpc GetCategoriesWithStatsByUser(UserID)
        returns (ListCategoriesWithStatsResponse);

    // Updates properties of an existing category.
    rpc UpdateCategory(UpdateCategoryRequest) returns (Category);

    // Deletes a category and returns the deleted entity.
    rpc DeleteCategory(CategoryRequest) returns (Category);

    // Generates a category-based financial report for a user.
    rpc GetCategoriesReport(CategoryReportRequest) returns (CategoryReportResponse);
}
