syntax = "proto3";

option go_package = "github.com/go-park-mail-ru/2025_2_VKarmane/internal/auth_service/proto;proto";

package auth;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


// protoc \
//  --go_out=. \
//  --go-grpc_out=. \
//  --go_opt=paths=source_relative \
//  --go-grpc_opt=paths=source_relative \
//  internal/auth_service/proto/auth.proto


message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string login = 5;
    string description = 6;
    string logo_hashed_id = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message RegisterRequest {
    string email = 1;
    string login = 2;
    string password = 3;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

message ProfileResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string login = 4;
    string email = 5;
    string logo_hashed_id = 6;
    string logo_url = 7;
    google.protobuf.Timestamp created_at = 8;
}

message UpdateProfileRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string logo_hashed_id = 4;
}

message UserID {
    int32 userID = 1;
}

message CSRFTokenResponse {
    string token = 1;
}


service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc GetProfile(UserID) returns (ProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse);
    rpc GetCSRF(google.protobuf.Empty) returns (CSRFTokenResponse);
}


